# udem

./: .bumpversion.cfg  .coverage  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml  samconfig.toml  template.yml
.github/workflows/: flow.yml
app/: main.py  requirements.txt
app/models/: iris_model.joblib
app/routers/: iris.py
notebooks/.ipynb_checkpoints/: train-checkpoint.ipynb
tests/: test_response.py
